# privateer

./: .gitignore  .gitmodules  .htaccess  .pytest.ini  CMakeCache.txt  CMakeLists.txt  DependencyInstaller.sh  Doxyfile  PrivateerInstaller.sh  README.md  blobs.cpp  blobs.h  build.sh  ccp4.envsetup-sh  clipper-glyco.cpp  clipper-glyco.h  clipper-glyco_data.cpp  clipper-glyco_data.h  get_sources  install_privateer_on_viking.sh  output.txt  privateer  privateer-blobs.cpp  privateer-blobs.h  privateer-frontend_scripting.i  privateer-lib.cpp  privateer-lib.h  privateer-pybind11.cpp  privateer-restraints.cpp  privateer-restraints.h  privateer-ss-find.cpp  privateer-ss-find.h  privateer-validate.cpp  privateer.cpp  privateer.wasm  pyproject.toml  requirements.txt  run_database_analysis.job  run_databases.sh  run_pdb.job  (+6 more)
ccp4/: CMakeLists.txt  Makefile  cmake_install.cmake
ccp4srs/: CMakeLists.txt
clipper/ccp4/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/cif/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/cns/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/contrib/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/core/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/gemmi/: CMakeLists.txt
clipper/minimol/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/mmdb/: CMakeLists.txt  Makefile  cmake_install.cmake
clipper/phs/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/ccp4srs/trunk/: Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure.ac  srsgen.cpp  srsrem.cpp  srsview.cpp
dependencies/ccp4srs/trunk/.bzr/branch/: branch.conf
dependencies/ccp4srs/trunk/.deps/: srsgen.Po  srsrem.Po  srsview.Po
dependencies/ccp4srs/trunk/ccp4srs/: ccp4srs_angle.cpp  ccp4srs_angle.h  ccp4srs_angle.lo  ccp4srs_atom.cpp  ccp4srs_atom.h  ccp4srs_atom.lo  ccp4srs_base.cpp  ccp4srs_base.h  ccp4srs_base.lo  ccp4srs_bond.cpp  ccp4srs_bond.lo  ccp4srs_chem.cpp  ccp4srs_chem.lo  ccp4srs_chicenter.cpp  ccp4srs_chicenter.lo  ccp4srs_container.cpp  ccp4srs_container.lo  ccp4srs_entry.cpp  ccp4srs_entry.lo  ccp4srs_index.cpp  ccp4srs_index.lo  ccp4srs_manager.cpp  ccp4srs_manager.h  ccp4srs_manager.lo  ccp4srs_monomer.cpp  ccp4srs_monomer.h  ccp4srs_monomer.lo  ccp4srs_plane.cpp  ccp4srs_plane.h  ccp4srs_plane.lo  ccp4srs_smiles.cpp  ccp4srs_smiles.h  ccp4srs_smiles.lo  ccp4srs_torsion.cpp  ccp4srs_torsion.h  ccp4srs_torsion.lo  ccp4srs_tree.cpp  ccp4srs_tree.h  ccp4srs_tree.lo  ccp4srs_types.cpp  (+8 more)
dependencies/ccp4srs/trunk/ccp4srs/.deps/: ccp4srs_angle.Plo  ccp4srs_atom.Plo  ccp4srs_base.Plo  ccp4srs_bond.Plo  ccp4srs_chem.Plo  ccp4srs_chicenter.Plo  ccp4srs_container.Plo  ccp4srs_entry.Plo  ccp4srs_index.Plo  ccp4srs_manager.Plo  ccp4srs_monomer.Plo  ccp4srs_plane.Plo  ccp4srs_smiles.Plo  ccp4srs_torsion.Plo  ccp4srs_tree.Plo  ccp4srs_types.Plo  memio_.Plo  mpfile_.Plo
dependencies/ccp4srs/trunk/ccp4srs/.libs/: libccp4srs.la  libccp4srs.lai
dependencies/ccp4srs/trunk/doc-html/html/: annotated.html  ccp4srs__angle_8cpp.html  ccp4srs__angle_8h.html  ccp4srs__angle_8h_source.html  ccp4srs__atom_8cpp.html  ccp4srs__atom_8h.html  ccp4srs__atom_8h_source.html  ccp4srs__base_8cpp.html  ccp4srs__base_8h.html  ccp4srs__base_8h_source.html  ccp4srs__bond_8cpp.html  ccp4srs__bond_8h.html  ccp4srs__bond_8h_source.html  ccp4srs__chem_8cpp.html  ccp4srs__chem_8h.html  ccp4srs__chem_8h_source.html  ccp4srs__chicenter_8cpp.html  ccp4srs__chicenter_8h.html  ccp4srs__chicenter_8h_source.html  ccp4srs__container_8cpp.html  ccp4srs__container_8h.html  ccp4srs__container_8h_source.html  ccp4srs__defs_8cpp.html  ccp4srs__defs_8h.html  ccp4srs__defs_8h_source.html  ccp4srs__entry_8cpp.html  ccp4srs__entry_8h.html  ccp4srs__entry_8h_source.html  ccp4srs__index_8cpp.html  ccp4srs__index_8h.html  ccp4srs__index_8h_source.html  ccp4srs__manager_8cpp.html  ccp4srs__manager_8h.html  ccp4srs__manager_8h_source.html  ccp4srs__monomer_8cpp.html  ccp4srs__monomer_8h.html  ccp4srs__monomer_8h_source.html  ccp4srs__plane_8cpp.html  ccp4srs__plane_8h.html  ccp4srs__plane_8h_source.html  (+264 more)
dependencies/clipper/trunk/: Makefile.am  Makefile.in  clipper.pc  config.status  configure.orig  configure.rej
dependencies/clipper/trunk/.bzr/branch/: branch.conf
dependencies/clipper/trunk/clipper/: Makefile.am  Makefile.in
dependencies/clipper/trunk/clipper/ccp4/: ccp4_map_io.cpp  ccp4_map_io.lo  ccp4_mtz_io.cpp  ccp4_mtz_io.lo  ccp4_mtz_types.cpp  ccp4_mtz_types.lo  ccp4_utils.cpp  ccp4_utils.lo  libclipper-ccp4.la
dependencies/clipper/trunk/clipper/cif/: cif_data_io.lo  libclipper-cif.la
dependencies/clipper/trunk/clipper/cns/: cns_hkl_io.lo  cns_map_io.h  cns_map_io.lo  libclipper-cns.la
dependencies/clipper/trunk/clipper/contrib/: Makefile.am  Makefile.in  convolution_search.cpp  convolution_search.h  convolution_search.lo  edcalc.cpp  edcalc.lo  fffear.lo  function_object_bases.lo  libclipper-contrib.la  mapfilter.cpp  mapfilter.h  mapfilter.lo  originmatch.cpp  originmatch.h  originmatch.lo  sfcalc.cpp  sfcalc.lo  sfcalc_obs.cpp  sfcalc_obs.lo  sfscale.cpp  sfscale.lo  sfweight.cpp  sfweight.lo  skeleton.h  skeleton.lo  test_contrib.lo
dependencies/clipper/trunk/clipper/core/: Makefile.am  Makefile.in  atomsf.cpp  atomsf.h  cell.h  clipper_message.h  clipper_stats.h  clipper_sysdep.h  clipper_thread.h  clipper_types.cpp  container_types.h  fftmap.h  fftmap_sparse.cpp  hkl_compute.cpp  hkl_data.h  hkl_info.cpp  hkl_info.h  hkl_operators.cpp  hkl_operators.h  libclipper-core.la  libclipper_core_la-atomsf.lo  libclipper_core_la-cell.lo  libclipper_core_la-clipper_instance.lo  libclipper_core_la-clipper_memory.lo  libclipper_core_la-clipper_message.lo  libclipper_core_la-clipper_stats.lo  libclipper_core_la-clipper_test.lo  libclipper_core_la-clipper_thread.lo  libclipper_core_la-clipper_types.lo  libclipper_core_la-clipper_util.lo  libclipper_core_la-container.lo  libclipper_core_la-container_hkl.lo  libclipper_core_la-container_map.lo  (+39 more)
fftw/: CMakeLists.txt
gemmi/: CMakeLists.txt
mmdb2/: CMakeLists.txt
rfftw/: CMakeLists.txt
(+31684 files in other folders)
