
[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "scikit_build_example"
version = "0.0.1"
description="A minimal example package (with pybind11)"
readme = "README.md"
authors = [
  { name = "Jordan Dialpuri", email = "jordan.dialpuri@york.ac.uk" },
]
requires-python = ">=3.7"

test = ["pytest"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests"]


[tool.cibuildwheel]
build-frontend = "build[uv]"
test-command = "pytest {project}/tests"
test-extras = ["test"]
